# sistema-analise-matematica-geometrica

./: Algorithms.hs  Calculus.hs  DataStructures.hs  Geometry.hs  Interface.hs  LinearAlgebra.hs  Main.hs  README.md  Reports.hs  Types.hs  Validation.hs  project.cabal
Documentation/: EXAMPLES.md  INSTALL.md  README.md
Engineering/: All.hs  Civil.hs  Electrical.hs  Mechanical.hs
Tests/: AlgorithmsTests.hs  AllTests.hs  CalculusTests.hs  CivilEngineersTests.hs  ElectricalEngineeringTests.hs  GeometryTests.hs  LinearAlgebraTests.hs  MechanicalEngineeringTests.hs  SortingTests.hs  ValidationTests.hs
