cabal-version:      2.4
name:               projeto-engenharia
version:            1.0.0
synopsis:           Sistema de análise matemática para engenharia
author:             Grupo de Estudantes
maintainer:         grupo@email.com
build-type:         Simple

library
    hs-source-dirs:   .
    exposed-modules:
        Types,
        Geometry,
        LinearAlgebra,
        Calculus,
        Algorithms,
        DataStructures,
        Validation,
        Reports,
        Interface,
        Engineering.Civil,
        Engineering.Mechanical,
        Engineering.Electrical,
        Engineering.All
    build-depends:
        base >= 4.14 && < 4.22,
        time >=1.9,
        containers >=0.6,
        time
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

executable projeto-engenharia
    main-is:          Main.hs
    hs-source-dirs:   .
    build-depends:
        base >= 4.14 && < 4.22,
        projeto-engenharia
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Tests/AllTests.hs
    hs-source-dirs:     ., Tests
    build-depends:
        base,
        projeto-engenharia,
        time,
        containers
    default-language:   Haskell2010