cabal-version:      2.4
name:               projeto-engenharia
version:            1.0.0
synopsis:           Sistema de análise matemática para engenharia
author:             Davi Cabeceira | Leornardo Pereira | Mateus Gomes | Yasmim Moreira
maintainer:         grupo@email.com
build-type:         Simple

library
    hs-source-dirs:   .
    exposed-modules:
        Algorithms
        Calculus
        DataStructures
        Engineering.Civil
        Engineering.Electrical
        Engineering.Mechanical
        Geometry
        Interface
        LinearAlgebra
        Reports
        Types
        Validation
    build-depends:
        base >= 4.14 && < 4.22,
        time >=1.9,
        containers >=0.6,
        time,
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

executable projeto-engenharia
    main-is:          Main.hs
    hs-source-dirs:   .
    build-depends:
        base >= 4.14 && < 4.22,
        projeto-engenharia,
        time
    other-modules:
        Algorithms
        Calculus
        DataStructures
        Engineering.Civil
        Engineering.Electrical
        Engineering.Mechanical
        Geometry
        Interface
        LinearAlgebra
        Reports
        Types
        Validation
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Tests/AllTests.hs
    hs-source-dirs:     ., Tests
    build-depends:
        base,
        projeto-engenharia,
        time,
        containers
    other-modules:
        Algorithms
        Calculus
        DataStructures
        Engineering.Civil
        Engineering.Electrical
        Engineering.Mechanical
        Geometry
        Interface
        LinearAlgebra
        Reports
        Types
        Validation
        Tests.AlgorithmsTests
        Tests.CalculusTests
        Tests.CivilEngineeringTests
        Tests.ElectricalEngineeringTests
        Tests.GeometryTests
        Tests.LinearAlgebraTests
        Tests.MechanicalEngineeringTests
        Tests.SortingTests
        Tests.ValidationTests
    default-language:   Haskell2010